<resources>
    <string name="app_name">ElectronicsHunter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wprowadz_nazwe_produktu">Wprowadź nazwę produktu</string>
    <string name="electronicshunter">ElectronicsHunter</string>
    <string name="szukaj">Szukaj</string>
    <string name="logo">Logo</string>
    <string name="obserwuj">Obserwuj</string>
    <string name="cena_maksymalna">Cena maksymalna</string>
    <string name="cena_minimalna">Cena minimalna</string>
    <string name="cena_aktualna">Cena aktualna</string>
    <string name="name"><u>name</u></string>
    <string name="sklep"><b>sklep </b></string>
    <string name="search_error">Nie udało się wyszukać przedmiotów dla wprowdzonej frazy :(</string>
    <string name="wyszukiwarka">Wyszukiwarka</string>
    <string name="obserwowane">Obserwowane</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="cena">Cena:</string>
    <string name="cena_docelowa_n">Cena docelowa </string>
    <string name="brak_obserwowanych_przedmiot_w">Brak obserwowanych przedmiotów.</string>
    <string name="shop_list_info">Aplikacja przedstawia oferty handlowe pochodzące z następujących sklepów internetowych:</string>
    <string name="settings_textview">Ustawienia</string>
    <string name="mediaexpert_textview">media-expert.pl</string>
    <string name="morele_textview">morele.net</string>
    <string name="xkom_textview">x-kom.pl</string>
    <string name="info_textview">Informacje</string>
    <string name="alerts_textview">Powiadomienia</string>
    <string name="observe_item_hint">Wprowadź maksymalną cenę docelową</string>
    <string name="goal_price">Cena docelowa1:</string>
    <string name="item_already_observed">Obserwujesz już ten przedmiot.</string>
    <string name="ok">OK</string>
    <string name="detailsitemimage">detailsItemImage</string>
</resources>
