<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".view.ItemDetailsFragment">
    <ImageView
            android:layout_width="391dp"
            android:layout_height="65dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            android:id="@+id/imageView"
            android:gravity="center"
            style="@style/logo"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/logo"/>

    <TextView
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="109dp"
            android:layout_below="@+id/imageView"
            android:id="@+id/itemName"/>

    <TextView
            android:text="@string/cena_aktualna"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="45dp"
            android:id="@+id/itemPrice"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/itemShopName"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/itemPriceValue"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_below="@+id/itemPrice"/>

    <TextView
            android:text="@string/cena_minimalna"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="48dp"
            android:id="@+id/itemMinPrice"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/itemPrice"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/itemMinPriceValue"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_below="@+id/itemMinPrice"/>

    <TextView
            android:text="@string/cena_maksymalna"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="48dp"
            android:id="@+id/itemMaxPrice"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/itemMinPrice"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/itemMaxPriceValue"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:textSize="19sp"
            android:layout_marginBottom="28dp"
            android:gravity="center"
            android:layout_below="@+id/itemMaxPrice"/>

    <EditText
            android:layout_width="345dp"
            android:layout_height="52.5dp"
            android:inputType="textPersonName"
            android:gravity="center"
            android:ems="10"
            android:id="@+id/priceGoal"
            android:hint="@string/observe_item_hint"
            android:autofillHints="@android:string/autofill"
            android:textAlignment="gravity"
            android:padding="5dp"
            android:background="@drawable/rounded_edittext"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/itemMaxPriceValue"/>

    <Button
            android:text="@string/obserwuj"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/priceGoal"
            android:background="@drawable/rounded_button"
            android:id="@+id/observeItemButton"/>

    <TextView
            android:text="@string/sklep"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="163dp"
            android:id="@+id/itemShopName"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/itemName"/>

    <Button
            android:layout_width="58dp"
            android:layout_height="44dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="23dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/ic_arrow_back_black_24dp"
            android:id="@+id/returnButton"/>
</RelativeLayout>