<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".view.ItemDetailsFragment">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="65dp"
            android:layout_marginEnd="65dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            android:id="@+id/imageView"
            android:gravity="center"
            style="@style/logo"
            android:contentDescription="@string/logo"/>

    <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/detailsItemImage"
            android:layout_below="@+id/imageView"
            android:contentDescription="@string/detailsitemimage"/>

    <TextView
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginStart="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/detailsItemImage"
            android:id="@+id/detailsName"/>

    <TextView
            android:text="@string/cena_aktualna"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="32dp"
            android:id="@+id/detailsPrice"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/detailsShopName"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detailsPriceValue"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_below="@+id/detailsPrice"/>

    <TextView
            android:text="@string/cena_minimalna"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="16dp"
            android:id="@+id/detailsMinPrice"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/detailsPriceValue"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detailsMinPriceValue"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_below="@+id/detailsMinPrice"/>

    <TextView
            android:text="@string/cena_maksymalna"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="16dp"
            android:id="@+id/detailsMaxPrice"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/detailsMinPriceValue"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detailsMaxPriceValue"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:textSize="19sp"
            android:layout_marginBottom="56dp"
            android:gravity="center"
            android:layout_below="@+id/detailsMaxPrice"/>

    <TextView
            android:text="@string/sklep"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="163dp"
            android:id="@+id/detailsShopName"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/detailsName"/>

    <Button
            android:layout_width="58dp"
            android:layout_height="44dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="23dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/ic_arrow_back_black_24dp"
            android:id="@+id/returnButton"/>


</RelativeLayout>