<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#FFFFFF"
             tools:context=".view.SearchFragment">

    <EditText
            android:layout_width="345dp"
            android:layout_height="75dp"
            android:inputType="textPersonName"
            android:layout_gravity="center"
            android:ems="10"
            android:id="@+id/searchedText"
            android:hint="@string/wprowadz_nazwe_produktu"
            android:autofillHints="@android:string/autofill"
            android:textAlignment="center"
            android:background="@drawable/rounded_edittext"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="319dp"
            android:layout_alignParentTop="true"/>

    <Button
            android:text="@string/szukaj"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:id="@+id/searchButton"
            android:background="@drawable/rounded_button"
            android:layout_centerHorizontal="true"

            android:layout_marginBottom="269dp"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/searchedText"/>

    <ImageView
            android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:gravity="center"
            style="@style/logo"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="75dp"
            android:contentDescription="@string/logo"/>


</RelativeLayout>