<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_marginTop="4dp"
                                                   android:layout_marginBottom="4dp"
                                                   android:background="@drawable/rounded_textview"
                                                   android:layout_height="150dp">
    <TextView
            android:id="@+id/observedItemName"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="250dp"/>

    <TextView
            android:id="@+id/observedItemPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="price"
            android:text="@string/cena"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/observedItemName"
            app:layout_constraintTop_toBottomOf="@+id/observedItemName"
            app:layout_constraintBottom_toTopOf="@+id/observedItemMinPrice"
            android:textColor="@android:color/black"/>

    <TextView
            android:id="@+id/observedItemMinPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="min_price"
            android:text="@string/cena_minimalna"
            app:layout_constraintStart_toStartOf="@+id/observedItemPrice"
            app:layout_constraintTop_toBottomOf="@+id/observedItemPrice"
            app:layout_constraintBottom_toTopOf="@+id/observedItemMaxPrice"
            android:textColor="@android:color/black"/>

    <TextView
            android:id="@+id/observedItemMaxPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="max_price"
            android:text="@string/cena_maksymalna"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="@+id/observedItemPrice"
            app:layout_constraintTop_toBottomOf="@+id/observedItemMinPrice"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@android:color/black"/>

    <TextView
            android:id="@+id/observedItemPriceGoal"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            tools:text="price_goal"
            android:text="@string/goal_price"
            android:gravity="center"
            android:layout_marginStart="180dp"
            android:layout_marginEnd="140dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintStart_toEndOf="@id/observedItemMinPrice"
            app:layout_constraintBottom_toBottomOf="@id/observedItemMinPrice"
            app:layout_constraintTop_toTopOf="@+id/observedItemMinPrice"
            app:layout_constraintEnd_toStartOf="@id/deleteObservedItemButton"
            android:textColor="#26547c"
            android:textStyle="bold"
            android:textSize="15sp"/>

    <Button
            android:id="@+id/deleteObservedItemButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:background="@drawable/ic_delete_black_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>